--- a/style.css
+++ b/style.css
@@ -25,7 +25,13 @@
 /* Navigation bar */
 
 .navigation_container {
-    font-size: 3vh;
+  width: 100%;
+  min-height: 8vh;
+  padding-left: 8%;
+  padding-right: 8%;
+  box-sizing: border-box;
+  overflow: hidden;
+    /* font-size: 3vh; 
     display: flex;
     padding: 10px;
     height: 90px;
@@ -39,11 +45,7 @@
 .navigation_container a{
   color: #4b4c4d;
 }
-@media (max-width: 960px){
-    .navigation_container{
-      display: none;
-    }
-}
+
 .logo {
     width: 50px;
     height: 50px;
@@ -61,6 +63,7 @@
 .menu {
     margin-left: auto;
     margin-right: 3%;
+    
 }
 
 .menu_list {
@@ -182,22 +185,22 @@
 
 
 /* Added Header */
+
 .header {
-    padding: 5px;
-    display: flex;
+    margin-top: 50px;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 50px;
     color: #fff;
-    background-size: cover;
-    background-position: top;
     background-size: cover;
     background-image: 
     linear-gradient(to right bottom, 
      rgba(220, 188, 224, 0.8),
      rgba(124, 85, 126, 0.315)),
-     url('img/header-cover.jpg');
+    url('img/header-cover.jpg');
   }
   
 .main_container{
-    margin-bottom: 50px;
     content: "";
   }
   .main_container:after {
@@ -243,6 +246,10 @@
         clear: both; 
         height: auto;
         flex: 1; 
+        margin-top: 50px;
+        margin-left: 3%;
+        margin-right: 3%;
+        margin-bottom: 50px;
     }
     .book_club_title h1{
         margin-top: 50px;
@@ -250,8 +257,7 @@
         font-weight: 800;
         font-size: 35px;
         color: #fff;
-        margin: 0%;
-        padding: 0%;
+       
        }
        .book_club_about h2{
         text-align: center;
@@ -263,9 +269,11 @@
   }
   @media only screen and (max-width:600px) {
     .header{
-      justify-content: flex-start;
-        margin: 0;
-        padding: 0;
+        justify-content: flex-start;
+        margin-left: 3%;
+        margin-right: 3%;
+        margin-bottom: 50px;
+    
     }
     .book_club_title h1{
         text-align: center;
@@ -273,8 +281,6 @@
         font-size: 35px;
         text-align-last: center;
         color: #fff;
-        margin: 0;
-        padding: 0;
        }
        .book_club_about h2{
         text-align: center;
@@ -282,13 +288,14 @@
         font-size: 25px;
         text-align-last: center;
         color: #fff;
-        padding: 0%;
        }
   }
 
 
 /* Added section and content div */
 section{
+    margin-left: 3%;
+    margin-right: 3%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -1151,7 +1158,6 @@ footer ul {
 
 /* Added Header */
 .header {
-    padding: 5px;
     display: flex;
     color: #fff;
     background-size: cover;
@@ -1162,6 +1168,7 @@ footer ul {
      rgba(220, 188, 224, 0.8),
      rgba(124, 85, 126, 0.315)),
      url('img/header-cover.jpg');
+     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
   }
   
 .main_container{
@@ -1331,6 +1338,7 @@ section{
      rgba(73, 67, 73, 0.315)),
      url('img/section-cover.jpg');
      clip-path: polygon(0 0, 100% 0, 700% 75vh, 0 100%); 
+     
   }
   .content .info h2{
     flex-basis: 100%;
